--- a/src/components/advantages/Advantages.css
+++ b/src/components/advantages/Advantages.css
@@ -1,9 +1,3 @@
-#advantages .inner {
-    display: flex;
-    gap: 20px;
-    row-gap: 20px;
-}
-
 #advantages .left {
     display: flex;
     gap: 20px;
@@ -32,7 +26,7 @@
     gap: 20px;
 }
 
-#advantages h2 {
+/* #advantages h2 {
     color: white;
     font-family: "Gilroy";
     font-size: 1.3em;
@@ -45,6 +39,14 @@
     font-style: normal;
     font-weight: 400;
     line-height: 140%;
+} */
+
+#advantages table p, #advantages table h2 {
+    color: white;
+}
+
+#advantages form p, #advantages form h2 {
+    color: #333;
 }
 
 #advantages .item {
@@ -128,8 +130,13 @@
 }
 
 table {
-    width: 100%;
-    border-collapse: collapse;
+    /* display: block; */
+    width: calc(100% + 40px);
+    border-collapse: separate;
+    border-width: 0px;
+    border-spacing: 20px;
+    position: relative;
+    left: -20px;
 }
 
 td {
@@ -137,19 +144,19 @@ td {
     height: 0;
     padding-bottom: 25%;
     position: relative;
-    border: 20px solid transparent;
+    /* border: 20px solid transparent; */
 }
 
 tr {
     width: 100%;
 }
 
-.cell2 {
+table.wide .cell2 {
     height: 0;
     padding-bottom: 50%;
 }
 
-.cell5 {
+table.wide .cell5 {
     width: 50%;
 }
 
@@ -167,23 +174,34 @@ tr {
         display: none;
     }
     #advantages table.short {
-        display: block;
+        display: table;
     }
 
     td {
         width: 50%;
-        /* height: 0; */
-        padding-bottom: 25%;
-        position: relative;
-        /* border: 20px solid transparent; */
-    }
-    
-    .cell2 {
-        height: 0;
         padding-bottom: 50%;
+        position: relative;
+        /* border: 30px solid transparent; */
     }
-    
-    .cell5 {
-        width: 100%;
+
+    #advantages table h2 {
+        font-size: 2.5em;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    #advantages .item {
+        border-radius: 20px !important;
+    }
+
+    #advantages .item p {
+        display: none;
+    }
+
+    td {
+        width: 50%;
+        padding-bottom: 45%;
+        position: relative;
+        /* border: 30px solid transparent; */
     }
 }
