--- a/src/components/location/Location.css
+++ b/src/components/location/Location.css
@@ -1,242 +1,407 @@
 #location .inner {
-    position: relative;
+  position: relative;
 }
 
 #location .top-img {
-    position: relative;
-    width: calc(100% + 40px);
-    right: 40px;
-    border-radius: 0 30px 30px 0;
+  position: relative;
+  width: calc(100% + 40px);
+  right: 40px;
+  border-radius: 0 30px 30px 0;
 }
 
 #location .circle {
-    width: 40%;
-    position: absolute;
-    left: -30%;
-    top: 50%;
+  width: 40%;
+  position: absolute;
+  left: -30%;
+  top: 50%;
 }
 
 #location .text {
-    position: absolute;
-    z-index: 1;
-    bottom: 70px;
-    text-transform: uppercase;
+  position: absolute;
+  z-index: 1;
+  bottom: 70px;
+  text-transform: uppercase;
 }
 
 #location .text {
-    font-size: 1em;
-    color: white;
-    max-width: 530px;
+  font-size: 1em;
+  color: white;
+  max-width: 530px;
 }
 
 #location .text h2 {
-    font-size: 5em;
-    color: var(--unnamed, #FFF);
-    font-family: Codec Pro;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 100%;
+  font-size: 5em;
+  color: var(--unnamed, #fff);
+  font-family: Codec Pro;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
 }
 
 #location .text span {
-    font-size: 0.5em;
-    color: white;
-    font-weight: 600;
-    display: block;
+  font-size: 0.5em;
+  color: white;
+  font-weight: 600;
+  display: block;
 }
 
 #location .text h3 {
-    font-size: 2.5em;
-    font-weight: 400;
-    color: var(--unnamed, #FFF);
-    font-family: "Codec Pro";
-    font-weight: 400;
-    line-height: 112.5%;
-    letter-spacing: -0.72px;
+  font-size: 2.5em;
+  font-weight: 400;
+  color: var(--unnamed, #fff);
+  font-family: "Codec Pro";
+  font-weight: 400;
+  line-height: 112.5%;
+  letter-spacing: -0.72px;
 }
 
 #location .text2 {
-    width: 50%;
-    margin-left: 50%;
-    margin-top: 120px;
-    /* display: flex; */
-    /* flex-direction: column; */
+  width: 50%;
+  margin-left: auto;
+  margin-top: 120px;
+  /* display: flex; */
+  /* flex-direction: column; */
 }
 
 #location .line {
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    background-color: #F0641E;
-    top: 30%;
-    z-index: -10;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #f0641e;
+  top: 30%;
+  z-index: -10;
 }
 
 #location .car {
-    margin-top: 80px;
-    height: 300px;
-    position: relative;
-    width: calc(100% + 80px);
-    left: -40px;
-    top: 50%;
-    overflow: hidden;
+  margin-top: 80px;
+  height: 300px;
+  position: relative;
+  width: calc(100% + 80px);
+  left: -40px;
+  top: 50%;
+  overflow: hidden;
 }
 
 #location .car-img {
-    width: 300px;
-    position: absolute;
-    left: 0;
-    top: 11%;
-    z-index: 2;
+  width: 300px;
+  position: absolute;
+  left: 0;
+  top: 11%;
+  z-index: 2;
 }
 
 #location .car-img img {
-    width: 100%;
+  width: 100%;
 }
 
 #location .lcircle {
-    position: absolute;
-    top: calc(30% - 13px);
-    max-width: 8%;
+  position: absolute;
+  top: calc(30% - 13px);
+  max-width: 10%;
+  left: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  z-index: -1;
+}
+
+#location .cir {
+  width: 26px;
+  height: 26px;
+  border: 2px solid #f0641e;
+  background-color: white;
+  border-radius: 100%;
+  align-self: center;
+}
+
+#location .lcircle span {
+  color: #f0641e;
+  font-family: "Gilroy bold";
+  font-size: 2.2em;
+  font-style: normal;
+  line-height: 110%;
+  padding-top: 40px;
+  padding-bottom: 6px;
+}
+
+#location .lcircle p {
+  color: var(--unnamed, #333);
+  /* font-size: 0.9em; */
+  font-style: normal;
+  font-weight: 400;
+  line-height: 110%;
+}
+
+#location .lcircle:nth-child(2) {
+  left: 16%;
+}
+
+#location .lcircle:nth-child(4) {
+  left: 21%;
+}
+
+#location .lcircle:nth-child(5) {
+  left: 37%;
+}
+
+#location .lcircle:nth-child(6) {
+  left: 53%;
+}
+
+#location .lcircle:nth-child(7) {
+  left: 69%;
+}
+
+#location .lcircle:nth-child(8) {
+  left: 85%;
+}
+
+#location .map {
+  display: flex;
+  align-items: flex-end;
+  gap: 50px;
+}
+
+#location .map-svg {
+  width: calc(77% - 50px);
+  border: 1px solid #a8a8a8;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+#location .left {
+  width: 23%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+
+#location .carousel {
+  overflow: hidden;
+  border-radius: 20px;
+}
+
+#location .carousel .img-con {
+  position: relative;
+  padding-bottom: 90%;
+}
+
+#location .carousel img {
+  position: absolute;
+  width: 100%;
+}
+
+#location .zoom {
+  margin-top: 65px;
+  position: relative;
+}
+
+#location .zoom-img {
+  width: 100%;
+  border-radius: 20px;
+}
+
+#location .zoom-btn {
+  cursor: pointer;
+  position: absolute;
+  min-width: 34px;
+  min-height: 34px;
+  border-radius: 100%;
+  width: 3%;
+  height: 6.5%;
+  background-color: #f0641e;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: 0.5s;
+}
+
+#location .zoom-btn:hover {
+  transform: scale(1.1);
+  background-color: #f0641e7c;
+}
+
+#location .zoom-svg {
+  width: 40%;
+  transition: 0.5s;
+}
+
+#location .zoom-btn:hover .zoom-svg {
+  transform: scale(0.8);
+}
+
+#location .zoom-btn.one {
+  top: 51%;
+  left: 25.5%;
+}
+
+#location .zoom-btn.two {
+  left: 45%;
+  top: 10%;
+}
+
+#location .zoom-btn.three {
+  left: 58%;
+  top: 48%;
+}
+
+#location .zoom-btn.four {
+  left: 80%;
+  top: 78%;
+}
+
+#location .map > button {
+  display: none;
+}
+
+@media screen and (max-width: 960px) {
+  #location .lcircle:last-child {
+    display: none;
+  }
+
+  #location .lcircle {
+    max-width: 11%;
     left: 5%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     z-index: -1;
-}
+  }
 
-#location .cir {
-    width: 26px;
-    height: 26px;
-    border: 2px solid #F0641E;
-    background-color: white;
-    border-radius: 100%;
-    align-self: center;
-}
+  #location .lcircle:nth-child(2) {
+    left: 20%;
+  }
 
-#location .lcircle span {
-    color: #F0641E;
-    font-family: "Gilroy bold";
-    font-size: 2.2em;
-    font-style: normal;
-    line-height: 110%;
-    padding-top: 40px;
-    padding-bottom: 6px;
-}
+  #location .lcircle:nth-child(4) {
+    left: 25%;
+  }
 
-#location .lcircle p {
-    color: var(--unnamed, #333);
-    font-size: 0.9em;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 110%;
-}
-
-#location .lcircle:nth-child(2) {
-    left: 16%;
-}
-
-#location .lcircle:nth-child(4) {
-    left: 21%;
-}
-
-#location .lcircle:nth-child(5) {
-    left: 37%;
-}
-
-#location .lcircle:nth-child(6) {
-    left: 53%;
-}
-
-#location .lcircle:nth-child(7) {
-    left: 69%;
-}
-
-#location .lcircle:nth-child(8) {
-    left: 85%;
-}
-
-#location .map {
-    display: flex;
-    align-items: flex-end;
-    gap: 50px;
-}
-
-#location .map-svg {
-    width: calc(77% - 50px);
-    border: 1px solid #a8a8a8;
-    border-radius: 20px;
-    overflow: hidden;
-}
-
-#location .left {
-    width: 23%;
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;
-}
-
-#location .carousel img {
-    width: 100%;
-    height: 100%;
-    border-radius: 20px;
-}
-
-#location .zoom {
-    margin-top: 65px;
-    position: relative;
-}
-
-#location .zoom-img {
-    width: 100%;
-    border-radius: 20px;
-}
-
-#location .zoom-btn {
-    cursor: pointer;
-    position: absolute;
-    min-width: 34px;
-    min-height: 34px;
-    border-radius: 100%;
-    width: 3%;
-    height: 6.5%;
-    background-color: #F0641E;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: 0.5s;
-}
-
-#location .zoom-btn:hover {
-    transform: scale(1.1);
-    background-color: #f0641e7c;
-}
-
-#location .zoom-svg {
-    width: 40%;
-    transition: 0.5s;
-}
-
-#location .zoom-btn:hover .zoom-svg {
-    transform: scale(0.8);
-}
-
-#location .zoom-btn.one {
-    top: 51%;
-    left: 25.5%;
-}
-
-#location .zoom-btn.two {
+  #location .lcircle:nth-child(5) {
     left: 45%;
-    top: 10%;
+  }
+
+  #location .lcircle:nth-child(6) {
+    left: 65%;
+  }
+
+  #location .lcircle:nth-child(7) {
+    left: 85%;
+  }
 }
 
-#location .zoom-btn.three {
-    left: 58%;
-    top: 48%;
+@media screen and (max-width: 960px) {
+  #location .left {
+    width: 34%;
+  }
+
+  #location .map {
+    gap: 3%;
+  }
+
+  #location .map-svg {
+    position: relative;
+    padding-bottom: 57%;
+    width: 100%;
+  }
+
+  #location .map-svg svg {
+    position: absolute;
+    height: 100%;
+    left: -25%;
+  }
+
+  #location .carousel .img-con {
+    position: relative;
+    padding-bottom: 87%;
+  }
 }
 
-#location .zoom-btn.four {
+@media screen and (max-width: 640px) {
+  #location .text2 {
+    width: 60%;
+  }
+
+  #location .map {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #location .carousel {
+    display: none;
+  }
+
+  #location .map > * {
+    width: 100%;
+  }
+
+  #location .left button {
+    display: none;
+  }
+
+  #location .map-svg {
+    position: relative;
+    padding-bottom: 80%;
+  }
+
+  #location .map-svg svg {
+    position: absolute;
+    height: 100%;
+    left: -15%;
+  }
+
+  #location .left * {
+    text-align: center;
+  }
+
+  #location .map > button {
+    display: block;
+    margin-top: 20px;
+    width: unset;
+  }
+
+  #location .lcircle:nth-child(7) {
+    display: none;
+  }
+
+  #location .lcircle:nth-child(2) {
+    left: 20%;
+  }
+
+  #location .lcircle:nth-child(4) {
+    left: 32%;
+  }
+
+  #location .lcircle:nth-child(5) {
+    left: 57%;
+  }
+
+  #location .lcircle:nth-child(6) {
     left: 80%;
-    top: 78%;
+  }
+
+  #location .lcircle {
+    max-width: 17%;
+  }
+
+  #location .lcircle span {
+    font-size: 3em;
+  }
+
+  #location .text2 {
+    width: 100%;
+  }
+
+  #location .text2 * {
+    text-align: center;
+  }
+
+  #location .top-img {
+    width: calc(100% + 20px);
+    right: 20px;
+  }
+
+  #location .car {
+    width: calc(100% + 40px);
+    left: -20px;
+  }
 }
