--- a/src/components/modalHeader/ModalHeader.css
+++ b/src/components/modalHeader/ModalHeader.css
@@ -1,159 +1,239 @@
 #header-modal {
-    left: 0;
-    position: fixed;
-    z-index: 10;
-    height: 65px;
-    width: 100%;
-    top: -70px;
-    transition: 0.5s;
+  left: 0;
+  position: fixed;
+  z-index: 10;
+  height: 65px;
+  width: 100%;
+  top: -70px;
+  transition: 0.5s;
+  background-color: #f1f1f1;
 }
 
 #header-modal.show {
-    top: 0px;
+  top: 0px;
 }
 
 #header-modal .inner {
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
-    background-color: #F1F1F1;
-    padding: 15px 40px;
-    display: flex;
-    justify-content: space-between;
-    backdrop-filter: blur(5px);
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  padding: 15px 40px;
+  display: flex;
+  justify-content: space-between;
 }
 
 #header-modal .logo {
-    height: 100%;
+  height: 100%;
 }
 
 #header-modal nav {
-    display: flex;
-    height: 100%;
-    align-items: center;
-
+  display: flex;
+  height: 100%;
+  align-items: center;
 }
 
 #header-modal nav a {
-    color: #1c1c29;
-    /* height: 100%; */
-    padding: 0 10px;
-    transition: 0.2s;
-    line-height: 1.55;
-    font-size: 0.7em;
-    font-weight: 600;
+  color: #1c1c29;
+  padding: 0 10px;
+  transition: 0.2s;
+  line-height: 1.55;
+  font-size: 0.9em;
+  font-weight: 600;
 }
 
 #header-modal nav a:hover {
-    color: #F0641E;
+  color: #f0641e;
 }
 
 #header-modal .left,
 #header-modal .right {
-    display: flex;
-    height: 100%;
-    gap: 20px;
-    align-items: center;
-    align-items: center;
+  display: flex;
+  height: 100%;
+  gap: 20px;
+  align-items: center;
+  align-items: center;
 }
 
 #header-modal .phone {
-    font-weight: 600;
-    font-size: 0.6em;
-    text-decoration: none;
+  font-weight: 600;
+  font-size: 0.8em;
+  text-decoration: none;
 }
 
 #header-modal .btn {
-    border-radius: 79px;
-    font-family: 'Gilroy';
-    font-size: 0.75em;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 110%;
-    padding: 15px 35px;
-    background: #F0641E;
-    color: #fff;
+  border-radius: 79px;
+  font-family: "Gilroy";
+  font-size: 0.9em;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 110%;
+  padding: 15px 35px;
+  background: #f0641e;
+  color: #fff;
 }
 
 #header-modal button:hover {
-    color: #F0641E;
+  color: #f0641e;
 }
 
 #header-modal .burger-menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
 }
 
 #header-modal .stick {
-    display: block;
-    width: 23px;
-    height: 3px;
-    background-color: #473886;
-    margin-bottom: 5px;
-    border-radius: 5px;
-    transition: 0.5s;
+  display: block;
+  width: 23px;
+  height: 3px;
+  background-color: #f0641e;
+  margin-bottom: 5px;
+  border-radius: 5px;
+  transition: 0.5s;
 }
 
-#header-modal .stick:nth-child(2) {
+/* #header-modal .stick:nth-child(2) {
     transition: none;
-}
+} */
 
 #header-modal .stick:last-child {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 #header-modal .burger-menu {
-    display: none;
+  display: none;
 }
 
 .burger-menu.active .stick:nth-child(1) {
-    transform: rotate(40deg) translateY(8px) translateX(3px);
-    width: 25px;
+  transform: rotate(40deg) translateY(3px) translateX(3px);
+  width: 24px;
 }
 
 .burger-menu.active .stick:nth-child(2) {
-    opacity: 0;
+  transform: rotate(-40deg) translateY(-3px) translateX(3px);
+  width: 24px;
 }
 
-.burger-menu.active .stick:nth-child(3) {
-    transform: rotate(-40deg) translateY(-8px) translateX(3px);
-    width: 25px;
+#header-modal .drop-nav {
+  display: flex;
+  flex-direction: column;
+  transition: 0.5s;
+  width: 100%;
+  background-color: #f1f1f1;
+  padding-bottom: 15px;
+  opacity: 0;
+  align-items: center;
+  gap: 30px;
+  z-index: -100;
+  display: none;
+}
+
+#header-modal .drop-nav nav {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+#header-modal .drop-nav.active {
+  display: block;
+  opacity: 1;
+  z-index: 0;
+}
+
+#header-modal .bottom {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  justify-content: center;
+  padding-top: 30px;
 }
 
 @media screen and (max-width: 1058px) {
-
-    #header-modal .left,
-    #header-modal .right {
-        gap: 10px;
-    }
+  #header-modal .left,
+  #header-modal .right {
+    gap: 10px;
+  }
 }
 
-@media screen and (max-width: 901px) {
-    #header-modal nav {
-        display: none;
-    }
+@media screen and (max-width: 900px) {
+  #header-modal {
+    top: 0px;
+  }
 
-    #header-modal .burger-menu {
-        display: flex;
-    }
+  #header-modal nav {
+    display: none;
+  }
+
+  #header-modal .burger-menu {
+    display: flex;
+  }
+
+  #header-modal nav a {
+    font-size: 1.2em;
+  }
+
+  #header-modal .btn {
+    font-size: 1.3em;
+  }
+
+  #header-modal .phone {
+    font-size: 1.2em;
+  }
+
+  #header-modal .drop-nav .phone {
+    display: block;
+  }
+
+  #header-modal .right > .btn {
+    display: none;
+  }
+
+  #header-modal .right > .phone {
+    display: none;
+  }
 }
 
-@media screen and (max-width: 728px) {
-    #header-modal .phone {
-        display: none;
-    }
+/* @media screen and (max-width: 728px) {
+  #header-modal .phone {
+    display: none;
+  }
 
-    #header-modal button {
-        padding: 0 10px;
-        font-size: 1.3em;
-    }
+  #header-modal .drop-down .phone {
+    display: block;
+  }
 
-    #header-modal .inner {
-        width: calc(100% - 40px);
-    }
+  #header-modal button {
+    padding: 0 10px;
+    font-size: 1.3em;
+  }
+
+  #header-modal .inner {
+    width: calc(100% - 40px);
+  }
+} */
+
+@media screen and (max-width: 600px) {
+  
+}
+
+@media screen and (max-width: 500px) {
+  #header-modal nav a {
+    font-size: 1.5em;
+  }
+
+  #header-modal .btn,
+  #header-modal .phone {
+    font-size: 1.5em;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  #header-modal .bottom {
+    flex-direction: column;
+    gap: 10px;
+  }
 }
