--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,16 @@
 body {
+  width: 100vw;
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #F1F1F1;
-  font-size: calc(4px + 1vw);
+  background: #f1f1f1;
+  font-size: calc(2px + 1.1vw);
   color: #333;
+  overflow-x: hidden;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -32,6 +34,16 @@ code {
   src: url("./fonts/Gilroy-Bold.ttf");
 }
 
+body::-webkit-scrollbar {
+  background-color: white;
+  width: 8px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #f0641e;
+  border-radius: 10px;
+}
+
 h1,
 h2 {
   font-family: "Codec Pro";
@@ -39,8 +51,6 @@ h2 {
 
 section {
   padding: 100px 40px;
-  /* overflow-x: hidden; */
-  /* overflow-y: visible; */
 }
 
 * {
@@ -53,7 +63,7 @@ section {
 
 nav {
   display: flex;
-  gap: 30px;
+  /* gap: 30px; */
 }
 
 button {
@@ -74,7 +84,8 @@ h1 {
   font-size: 2.5em;
 }
 
-h2, h2.primary {
+h2,
+h2.primary {
   font-size: 2em;
   color: var(--unnamed, #333);
   font-family: "Gilroy";
@@ -95,6 +106,7 @@ p {
 button,
 a,
 span,
+input,
 p {
   font-size: 0.8em;
   color: var(--unnamed, #333);
@@ -105,16 +117,137 @@ p {
 }
 
 button.primary {
-  height: 50px;
-  padding: 15px 36px;
+  /* height: 50px; */
+  padding: 13px 36px;
   background-color: #00705a;
   color: white;
   border-radius: 79px;
-  background: var(--2, #00705A);
+  background: var(--2, #00705a);
   line-height: 0.95;
   color: white !important;
 }
 
 .orange {
-  color: #F0641E !important;
+  color: #f0641e !important;
 }
+
+@media screen and (max-width: 960px) {
+  button,
+  a,
+  span,
+  input,
+  p {
+    font-size: 1.3em;
+    color: var(--unnamed, #333);
+    font-family: "Gilroy";
+    font-style: normal;
+    font-weight: 400;
+    line-height: 140%;
+  }
+
+  h1 {
+    font-size: 3em;
+  }
+
+  h2,
+  h2.primary {
+    font-size: 2.5em;
+    color: var(--unnamed, #333);
+    font-family: "Gilroy";
+    font-style: normal;
+    font-weight: 600;
+    line-height: 90%;
+    padding-bottom: 10px;
+  }
+
+  h3 {
+    font-size: 2em;
+  }
+
+  .orange {
+    font-size: 1.2em !important;
+    font-weight: 600 !important;
+  }
+
+  #location .car {
+    margin-top: 80px;
+    height: 300px;
+    position: relative;
+    width: calc(100% + 40px);
+    left: -40px;
+    top: 50%;
+    overflow: hidden;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  button,
+  a,
+  span,
+  input,
+  p {
+    font-size: 1.8em;
+  }
+
+  h1 {
+    font-size: 3em;
+  }
+
+  h2,
+  h2.primary {
+    font-size: 3.5em;
+  }
+
+  h3 {
+    font-size: 2em;
+  }
+
+  .orange {
+    font-size: 1.5em !important;
+    font-weight: 600 !important;
+  }
+
+  #location .car {
+    margin-top: 80px;
+    height: 300px;
+    position: relative;
+    width: calc(100% + 40px);
+    left: -40px;
+    top: 50%;
+    overflow: hidden;
+  }
+
+  section {
+    padding: 50px 20px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  button,
+  a,
+  span,
+  input,
+  p {
+    font-size: 2.5em;
+  }
+
+  h1 {
+    font-size: 6em;
+  }
+
+  h2,
+  h2.primary {
+    font-size: 5em;
+  }
+
+  h3 {
+    font-size: 2em;
+  }
+
+  .orange {
+    font-size: 2.5em !important;
+    font-weight: 600 !important;
+  }
+}
+
+
